Fixed z-index

--- a/less/charts/scatter.less
+++ b/less/charts/scatter.less
@@ -13,7 +13,7 @@
 .group li { position: absolute; margin: 0; padding: 0; text-align: center; }
 
 .group li:before { content: "◆"; font-size: 1em; color: #ccc; z-index:90 }
-.group li.you:before { color: #65DB65; z-index: 100 }
+.group li.you:before { color: #65DB65; z-index: 100; }
 
 .group li span { display: none; }
 
